--- a/index.html
+++ b/index.html
@@ -75,20 +75,34 @@
     .pm-title{font-weight:1100;font-size:20px}
     .pm-price{font-weight:1100;font-size:22px;color:#0369a1;margin-top:4px}
     .pm-meta{margin-top:10px;color:#475569;font-weight:900;font-size:13px}
-    .seller-card{margin-top:14px;border:1px solid var(--line);border-radius:16px;padding:14px;background:var(--soft2);
-  display:grid;gap:12px;align-items:center;
-  grid-template-columns:44px 1fr;
-  grid-template-areas:"ava info" "btn btn";
-}
-.seller-card .seller-badge{grid-area:ava;width:44px;height:44px;font-size:14px}
-.seller-card .seller-info-wrap{grid-area:info;min-width:0}
-.seller-card .btn{grid-area:btn;justify-content:center;width:100%}
+    .seller-card{
+  margin-top:14px;
+  border:1px solid var(--line);
+  border-radius:16px;
+  padding:14px;
+  background:var(--soft2);
 
-/* desktop: knappen på samma rad utan att täcka info */
-@media (min-width: 769px){
-  .seller-card{grid-template-columns:56px 1fr auto;grid-template-areas:"ava info btn";}
-  .seller-card .seller-badge{width:46px;height:46px;font-size:14px}
-  .seller-card .btn{width:auto;min-width:160px}
+  /* robust layout: no overlap, wraps nicely */
+  display:flex;
+  gap:12px;
+  align-items:center;
+  flex-wrap:wrap;
+
+  /* enable container queries for the CTA wrap */
+  container-type:inline-size;
+}
+.seller-card .seller-badge{width:44px;height:44px;font-size:14px}
+.seller-card .seller-info-wrap{flex:1;min-width:180px;min-width:0}
+.seller-card .btn{
+  margin-left:auto;
+  position:static !important;
+  right:auto !important;
+  top:auto !important;
+}
+
+/* if the card is narrow, make the CTA a full row */
+@container (max-width: 360px){
+  .seller-card .btn{width:100%;margin-left:0;justify-content:center}
 }
 
 .stars{display:inline-flex;gap:2px;align-items:center;font-weight:1100}
@@ -177,11 +191,13 @@
       /* bättre mobil-layout i annons-modal */
       .head{position:sticky;top:0;z-index:5;background:#fff}
       .pad{padding:14px}
-      .seller-card{grid-template-columns:44px 1fr;}
-      .seller-card .btn{grid-column:1/-1;width:100%}
       .pm-title{font-size:18px}
       .pm-price{font-size:20px}
       .thumbs img{width:64px;height:50px}
+
+      /* profil */
+      .profile-topbar{position:sticky;top:74px;background:rgba(240,249,255,.92);backdrop-filter:blur(6px);padding:10px 0;z-index:20}
+    }
 
       /* profil */
       .profile-topbar{position:sticky;top:74px;background:rgba(240,249,255,.92);backdrop-filter:blur(6px);padding:10px 0;z-index:20}
