--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <div class="logo">👶</div>
       <div>
         <strong>Miniblocket</strong>
-        <small>Bara barnsaker</small>
+        <small>Skapat av föräldrar - För föräldrar</small>
       </div>
     </div>
 
