--- a/index.html
+++ b/index.html
@@ -155,6 +155,261 @@
     .menu-item { padding: 14px 20px; cursor: pointer; display: flex; align-items: center; gap: 10px; font-weight: 600; }
     .menu-item:hover { background: #f8fafc; color: var(--primary); }
     .menu-divider { border-top: 1px solid var(--border); margin: 4px 0; }
+
+    /* ============================================
+   MOBILANPASSNING - Lägg till detta i slutet av <style>
+   ============================================ */
+
+@media (max-width: 768px) {
+  /* Generella justeringar */
+  .container {
+    padding: 0 12px;
+  }
+  
+  /* Navigation */
+  .nav {
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  
+  .brand span {
+    font-size: 16px;
+  }
+  
+  /* Sökbar - stapla vertikalt på mobil */
+  .search-bar {
+    flex-direction: column;
+  }
+  
+  .search-bar input,
+  .search-bar select {
+    min-width: 100%;
+    width: 100%;
+  }
+  
+  /* Kategorier - bättre scroll */
+  .cats {
+    gap: 8px;
+    padding: 8px 0;
+    -webkit-overflow-scrolling: touch;
+  }
+  
+  .cat {
+    padding: 8px 14px;
+    font-size: 14px;
+  }
+  
+  /* Produktkort - fullbredd på små skärmar */
+  .grid {
+    grid-template-columns: 1fr;
+    gap: 16px;
+  }
+  
+  .card-img {
+    height: 240px; /* Större bilder på mobil */
+  }
+  
+  /* Modaler - fullskärm på mobil */
+  .modal {
+    padding: 0;
+    align-items: flex-end; /* Öppna från botten */
+  }
+  
+  .modal-box {
+    max-width: 100%;
+    max-height: 95vh;
+    border-radius: 20px 20px 0 0; /* Rundade hörn överst */
+    width: 100%;
+  }
+  
+  /* Produktmodal - lägg till scroll och vertikal layout */
+  #productModal .modal-body {
+    grid-template-columns: 1fr;
+    gap: 16px;
+    max-height: calc(95vh - 80px);
+    overflow-y: auto;
+  }
+  
+  #modalImg {
+    height: 250px;
+  }
+  
+  /* Bildgalleri i modal - scrollbart */
+  #modalThumbs {
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    gap: 8px;
+    padding-bottom: 8px;
+  }
+  
+  /* Sälj-modal - enkolumnigt */
+  #sellModal .modal-body > div[style*="grid-template-columns"] {
+    grid-template-columns: 1fr !important;
+  }
+  
+  /* Chat - fullskärm */
+  .chat-panel {
+    max-width: 100%;
+    width: 100%;
+  }
+  
+  .chat-conv {
+    padding: 12px;
+  }
+  
+  /* Profil - bättre padding */
+  .profile-grid {
+    gap: 16px;
+  }
+  
+  .panel-body {
+    padding: 16px;
+  }
+  
+  .stat-grid {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 8px;
+  }
+  
+  .stat-box {
+    padding: 12px 8px;
+  }
+  
+  .stat-num {
+    font-size: 20px;
+  }
+  
+  /* Lista-produkter i profil */
+  .list-item {
+    flex-wrap: wrap;
+    gap: 12px;
+  }
+  
+  .item-thumb {
+    width: 60px;
+    height: 60px;
+  }
+  
+  .item-actions {
+    width: 100%;
+    margin-top: 8px;
+  }
+  
+  /* Admin panel */
+  .admin-nav-item {
+    padding: 14px 12px;
+    font-size: 14px;
+  }
+  
+  /* Bild-grid i säljformulär */
+  .img-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  
+  /* Toast - säkerställ synlighet */
+  .toast {
+    max-width: 90%;
+    text-align: center;
+    font-size: 14px;
+  }
+  
+  /* Knappar - större touch-mål */
+  .btn {
+    padding: 12px 20px;
+    min-height: 44px; /* iOS rekommendation */
+  }
+  
+  .tab-btn {
+    padding: 12px 8px;
+    font-size: 14px;
+  }
+  
+  /* Meny - fullbredd på mobil */
+  .menu-dropdown {
+    right: 10px;
+    left: 10px;
+    min-width: auto;
+  }
+}
+
+/* Extra små skärmar (iPhone SE, gamla Android) */
+@media (max-width: 380px) {
+  .card-img {
+    height: 200px;
+  }
+  
+  .nav {
+    padding: 10px 0;
+  }
+  
+  .btn {
+    padding: 10px 16px;
+    font-size: 14px;
+  }
+  
+  #sellBtn {
+    padding: 10px 14px;
+  }
+  
+  .stat-label {
+    font-size: 10px;
+  }
+  
+  .badge-pending {
+    font-size: 11px;
+    padding: 4px 8px;
+  }
+}
+
+/* Fix för iOS Safari (viewport height issue) */
+@supports (-webkit-touch-callout: none) {
+  .page {
+    min-height: -webkit-fill-available;
+  }
+  
+  .chat-panel {
+    height: -webkit-fill-available;
+  }
+}
+
+/* Förhindra horisontell scroll */
+body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
+/* Bättre touch-respons */
+button, 
+input, 
+select, 
+textarea,
+.cat,
+.card,
+.chat-conv {
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* Större text på mobil för läsbarhet */
+@media (max-width: 768px) {
+  body {
+    font-size: 16px; /* Förhindrar zoom på iOS */
+  }
+  
+  input, 
+  select, 
+  textarea {
+    font-size: 16px; /* Viktigt! 16px förhindrar auto-zoom på iOS */
+  }
+  
+  .card-title {
+    font-size: 16px;
+  }
+  
+  .card-price {
+    font-size: 20px;
+  }
+}
   </style>
 </head>
 <body>
