--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>MiniblocketTest</title>
+  <title>Miniblocket</title>
   <style>
     :root {
       --primary: #0ea5e9;
