html txt ändrad

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>secondhand blocket</title>
+  <title>UrVuxet</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -15,7 +15,7 @@
     <div class="container nav">
       <div class="brand" onclick="showHome()">
         <div class="logo">👶</div>
-        <span>Miniblocket</span>
+        <span>För saker barnen vuxit ur</span>
       </div>
       <div style="display: flex; align-items: center; gap: 10px;">
         <button class="btn btn-soft" id="authBtn" onclick="openAuth()">Logga in</button>
