--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <nav>
     <div class="container nav">
       <div class="brand" onclick="showHome()">
-        <div class="logo">👶</div>
-        <span>För saker barnen vuxit ur</span>
-      </div>
+  <img src="assets/img/logo.png" alt="UrVuxet logga" class="logo-img">
+  <span>För saker barnen vuxit ur</span>
+</div>
       <div style="display: flex; align-items: center; gap: 10px;">
         <button class="btn btn-soft" id="authBtn" onclick="openAuth()">Logga in</button>
         <button class="btn btn-primary hidden" id="sellBtn" onclick="openSellModal()">+ Sälj</button>
