--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="color-scheme" content="light dark">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
   <meta name="description" content="Köp och sälj begagnade barnartiklar säkert på UrVuxet">
   <title>UrVuxet</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -14,31 +14,31 @@
 <body>
 
   <nav>
-  <div class="container">
-    <div class="nav-inner">
-      <div class="brand" onclick="showHome()">
-        <!-- Desktop -->
-        <img src="assets/img/logodesklight.png" alt="UrVuxet" class="logo logo-desktop logo-light">
-        <img src="assets/img/logodeskdark.png" alt="UrVuxet" class="logo logo-desktop logo-dark">
+    <div class="container">
+      <div class="nav-inner">
+        <div class="brand" onclick="showHome()">
+          <!-- Desktop -->
+          <img src="assets/img/logodesklight.png" alt="UrVuxet" class="logo logo-desktop logo-light">
+          <img src="assets/img/logodeskdark.png" alt="UrVuxet" class="logo logo-desktop logo-dark">
 
-        <!-- Mobile -->
-        <img src="assets/img/logomoblight.png" alt="UrVuxet" class="logo logo-mobile logo-light">
-        <img src="assets/img/logomobdark.png" alt="UrVuxet" class="logo logo-mobile logo-dark">
-      </div>
+          <!-- Mobile -->
+          <img src="assets/img/logomoblight.png" alt="UrVuxet" class="logo logo-mobile logo-light">
+          <img src="assets/img/logomobdark.png" alt="UrVuxet" class="logo logo-mobile logo-dark">
+        </div>
 
-      <div class="nav-actions">
-        <button class="btn btn-soft" id="authBtn" onclick="openAuth()">Logga in</button>
-        <button class="btn btn-primary hidden" id="sellBtn" onclick="openSellModal()">+ Sälj</button>
-        <button class="btn btn-soft hidden" id="chatBtn" onclick="openChat()" style="position: relative;">
-          💬
-          <span id="chatBadge" class="hidden"
-            style="position: absolute; top: -5px; right: -5px; background: var(--danger); color: white; width: 20px; height: 20px; border-radius: 50%; font-size: 11px; display: flex; align-items: center; justify-content: center; font-weight: 800;">0</span>
-        </button>
-        <div class="avatar hidden" id="userAvatar" onclick="toggleMenu(event)">??</div>
+        <div class="nav-actions">
+          <button class="btn btn-soft" id="authBtn" onclick="openAuth()">Logga in</button>
+          <button class="btn btn-primary hidden" id="sellBtn" onclick="openSellModal()">+ Sälj</button>
+          <button class="btn btn-soft hidden" id="chatBtn" onclick="openChat()" style="position: relative;">
+            💬
+            <span id="chatBadge" class="hidden"
+              style="position: absolute; top: -5px; right: -5px; background: var(--danger); color: white; width: 20px; height: 20px; border-radius: 50%; font-size: 11px; display: flex; align-items: center; justify-content: center; font-weight: 800;">0</span>
+          </button>
+          <div class="avatar hidden" id="userAvatar" onclick="toggleMenu(event)">??</div>
+        </div>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
 
   <div id="userMenu" class="menu-dropdown hidden">
@@ -104,7 +104,7 @@
       </div>
 
 
-      
+
 
 
 
@@ -190,9 +190,13 @@
                 <span>🚨 Anmälningar</span>
                 <span class="count-badge hidden" id="badgeReports">0</span>
               </div>
+              <div class="admin-nav-item" onclick="setAdminTab('history', this)">
+                Historik
+              </div>
               <div class="admin-nav-item" onclick="setAdminTab('users', this)">
                 <span>👥 Användare</span>
               </div>
+
             </div>
           </div>
         </div>
@@ -326,60 +330,59 @@
     </div>
   </div>
 
- <div id="productModal" class="modal" onclick="if(event.target === this) closeModal('productModal')">
-  <div class="modal-box">
-    <div class="modal-head">
-      <h3>Annonsdetaljer</h3>
-      <button class="close-btn" onclick="closeModal('productModal')">✕</button>
-    </div>
-
-    <div class="modal-body product-modal-body">
-      <div>
-        <div class="modal-image-wrapper">
-          <button id="prevImgBtn" class="img-nav left" onclick="prevImage()">‹</button>
-          <img id="modalImg">
-          <button id="nextImgBtn" class="img-nav right" onclick="nextImage()">›</button>
-        </div>
-        <div id="modalThumbs" style="display:flex; gap:8px; margin-top:12px; overflow-x:auto;"></div>
+  <div id="productModal" class="modal" onclick="if(event.target === this) closeModal('productModal')">
+    <div class="modal-box">
+      <div class="modal-head">
+        <h3>Annonsdetaljer</h3>
+        <button class="close-btn" onclick="closeModal('productModal')">✕</button>
       </div>
 
-      <div>
-        <div id="modalStatus"></div>
-        <h2 id="modalTitle" style="font-size:24px; font-weight:800; margin:8px 0;">--</h2>
-        <div id="modalPrice" style="font-size:28px; font-weight:800; color:var(--primary);">--</div>
-        <div id="modalMeta" style="color:#64748b; margin:12px 0;">--</div>
+      <div class="modal-body product-modal-body">
+        <div>
+          <div class="modal-image-wrapper">
+            <button id="prevImgBtn" class="img-nav left" onclick="prevImage()">‹</button>
+            <img id="modalImg">
+            <button id="nextImgBtn" class="img-nav right" onclick="nextImage()">›</button>
+          </div>
+          <div id="modalThumbs" style="display:flex; gap:8px; margin-top:12px; overflow-x:auto;"></div>
+        </div>
 
-        <div style="display:flex; gap:12px; margin:20px 0;">
-          <div id="modalSellerAvatar"
-               style="width:50px;height:50px;border-radius:50%;
+        <div>
+          <div id="modalStatus"></div>
+          <h2 id="modalTitle" style="font-size:24px; font-weight:800; margin:8px 0;">--</h2>
+          <div id="modalPrice" style="font-size:28px; font-weight:800; color:var(--primary);">--</div>
+          <div id="modalMeta" style="color:#64748b; margin:12px 0;">--</div>
+
+          <div style="display:flex; gap:12px; margin:20px 0;">
+            <div id="modalSellerAvatar" style="width:50px;height:50px;border-radius:50%;
                       background:linear-gradient(135deg,#10b981,#0ea5e9);
                       display:flex;align-items:center;justify-content:center;
                       color:white;font-weight:700;">??</div>
-          <div>
-            <div id="modalSellerName" style="font-weight:700;">--</div>
-            <div style="font-size:14px; color:#64748b;">Säljare</div>
+            <div>
+              <div id="modalSellerName" style="font-weight:700;">--</div>
+              <div style="font-size:14px; color:#64748b;">Säljare</div>
+            </div>
           </div>
-        </div>
 
-        <p id="modalDesc" style="color:#64748b; line-height:1.6; margin-bottom:20px;">--</p>
+          <p id="modalDesc" style="color:#64748b; line-height:1.6; margin-bottom:20px;">--</p>
 
-        <div id="modalActions" style="display:flex; gap:10px; flex-wrap:wrap;">
-          <button class="btn btn-primary" id="btnContact" onclick="contactSeller()">💬 Kontakta</button>
-          <button class="btn btn-soft" id="modalFavBtn" onclick="toggleFavoriteFromModal()">🤍 Favorit</button>
-          <button class="btn btn-warning" onclick="openReport()">🚨 Anmäl</button>
-        </div>
+          <div id="modalActions" style="display:flex; gap:10px; flex-wrap:wrap;">
+            <button class="btn btn-primary" id="btnContact" onclick="contactSeller()">💬 Kontakta</button>
+            <button class="btn btn-soft" id="modalFavBtn" onclick="toggleFavoriteFromModal()">🤍 Favorit</button>
+            <button class="btn btn-warning" onclick="openReport()">🚨 Anmäl</button>
+          </div>
 
-        <div id="ownerActions" class="hidden"
-             style="border-top:1px solid var(--border); margin-top:20px; padding-top:20px;">
-          <div style="font-weight:600; margin-bottom:10px; color:#64748b;">Hantera din annons:</div>
-          <button class="btn btn-soft" onclick="editProduct()">✏️ Redigera</button>
-          <button class="btn btn-success" id="btnSold" onclick="markSold()">✓ Markera såld</button>
-          <button class="btn btn-danger" onclick="deleteProduct()">🗑️ Ta bort annons permanent</button>
+          <div id="ownerActions" class="hidden"
+            style="border-top:1px solid var(--border); margin-top:20px; padding-top:20px;">
+            <div style="font-weight:600; margin-bottom:10px; color:#64748b;">Hantera din annons:</div>
+            <button class="btn btn-soft" onclick="editProduct()">✏️ Redigera</button>
+            <button class="btn btn-success" id="btnSold" onclick="markSold()">✓ Markera såld</button>
+            <button class="btn btn-danger" onclick="deleteProduct()">🗑️ Ta bort annons permanent</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
 
   <div id="reportModal" class="modal" onclick="if(event.target === this) closeModal('reportModal')">
@@ -493,4 +496,5 @@
 
   <script type="module" src="assets/js/app.js"></script>
 </body>
+
 </html>
