--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="nav-actions">
           <button class="btn btn-soft" id="authBtn" onclick="openAuth()">Logga in</button>
-          <button class="btn btn-primary hidden" id="sellBtn" onclick="openSellModal()">+ Sälj</button>
+          <button class="btn btn-primary hidden" id="sellBtn" onclick="openSellModal()">lägg ut en nyannons</button>
           <button class="btn btn-soft hidden" id="chatBtn" onclick="openChat()" style="position: relative;">
             💬
             <span id="chatBadge" class="hidden"
